--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Concepts</title>
-    <script src="./ArrayMethods/arrays.js"></script>
+    <!-- <script src="./ArrayMethods/arrays.js"></script>
     <script src="./SpreadOperator/SpreadOperator.js"></script>
-    <script src="./HOC/hoc.js"></script>
+    <script src="./HOC/hoc.js"></script> -->
+    <!-- <script src="./CallApplyBind/index.js"></script> -->
+    <script src="./Hoisting/index.js"></script>
 </head>
 <body>
     <h1 style="text-align: center">JS Concepts</h1>
