--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <script src="./SpreadOperator/SpreadOperator.js"></script>
     <script src="./HOC/hoc.js"></script> -->
     <!-- <script src="./CallApplyBind/index.js"></script> -->
-    <script src="./Hoisting/index.js"></script>
+    <!-- <script src="./Hoisting/index.js"></script> -->
+    <script src="./Closures/index.js"></script>
 </head>
 <body>
     <h1 style="text-align: center">JS Concepts</h1>
