callback functions done

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <script src="./HOC/hoc.js"></script> -->
     <!-- <script src="./CallApplyBind/index.js"></script> -->
     <!-- <script src="./Hoisting/index.js"></script> -->
-    <script src="./Closures/index.js"></script>
+    <!-- <script src="./Closures/index.js"></script> -->
+    
 </head>
 <body>
     <h1 style="text-align: center">JS Concepts</h1>
+    <button id="clickMe">Button</button>
 </body>
+<script src="./CallbackFunctions/CallbackFunctions.js"></script>
 </html>
