promises concepts basics done

--- a/index.html
+++ b/index.html
@@ -5,17 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Concepts</title>
-    <!-- <script src="./ArrayMethods/arrays.js"></script>
+    <!-- <script src="./ArrayMethods/arrays.js"></script> -->
+    <!-- 
     <script src="./SpreadOperator/SpreadOperator.js"></script>
     <script src="./HOC/hoc.js"></script> -->
     <!-- <script src="./CallApplyBind/index.js"></script> -->
     <!-- <script src="./Hoisting/index.js"></script> -->
     <!-- <script src="./Closures/index.js"></script> -->
-    
+    <!-- <script src="./index.js"></script> -->
 </head>
 <body>
     <h1 style="text-align: center">JS Concepts</h1>
     <button id="clickMe">Button</button>
 </body>
 <script src="./CallbackFunctions/CallbackFunctions.js"></script>
+<script src="./Promises/Promises.js"></script>
 </html>
