function, data types and scope done

--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
     <!-- <script src="./Hoisting/index.js"></script> -->
     <!-- <script src="./Closures/index.js"></script> -->
     <!-- <script src="./index.js"></script> -->
+    <!-- <script src="./Datatypes/index.js"></script> -->
+    <!-- <script src="./Functions/index.js"></script> -->
+    <script src="./Scope/index.js"></script>
 </head>
 <body>
     <h1 style="text-align: center">JS Concepts</h1>
     <button id="clickMe">Button</button>
 </body>
-<script src="./CallbackFunctions/CallbackFunctions.js"></script>
-<script src="./Promises/Promises.js"></script>
+<!-- <script src="./CallbackFunctions/CallbackFunctions.js"></script>
+<script src="./Promises/Promises.js"></script> -->
 </html>
