eventloop, hof and unit testing done

--- a/index.html
+++ b/index.html
@@ -15,12 +15,30 @@
     <!-- <script src="./index.js"></script> -->
     <!-- <script src="./Datatypes/index.js"></script> -->
     <!-- <script src="./Functions/index.js"></script> -->
-    <script src="./Scope/index.js"></script>
+    <!-- <script src="./Scope/index.js"></script> -->
+    <!-- <script src="./EventLoop/index.js"></script> -->
+    <!-- <script src="./Prototype/index.js"></script> -->
+    <!-- <script src="./ClassInheritance/index.js"></script> -->
+    <!-- <script src="./Classes/index.js"></script> -->
+    <!-- <script src="./CallApplyBind/CallApplyBind.js"></script> -->
+    <!-- <script src="./Currying/index.js"></script> -->
 </head>
 <body>
-    <h1 style="text-align: center">JS Concepts</h1>
+    <h2 style="text-align: center">JS Concepts</h2>
     <button id="clickMe">Button</button>
+    <p id="para1">This is my first pagagraph</p>
+    <h1>Favourite TV Shows</h1>
+    <ul class="list">
+        <li>Golden Girls</li>
+        <li>Archer</li>
+        <li>Rick and Morty</li>
+        <li>The Crown</li>
+    </ul>
+    <button id="btn">Show alert</button>
+    <h1 id="heading">Hello Abhishek</h1>
 </body>
-<!-- <script src="./CallbackFunctions/CallbackFunctions.js"></script>
-<script src="./Promises/Promises.js"></script> -->
+<!-- <script src="./DOM/index.js"></script> -->
+<!-- <script src="./CallbackFunctions/CallbackFunctions.js"></script> -->
+<!-- <script src="./Promises/Promises.js"></script> -->
+
 </html>
