es6 features done

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!-- <script src="./Classes/index.js"></script> -->
     <!-- <script src="./CallApplyBind/CallApplyBind.js"></script> -->
     <!-- <script src="./Currying/index.js"></script> -->
+    <script src="./ES6Features/ES6Features.js"></script>
 </head>
 <body>
     <h2 style="text-align: center">JS Concepts</h2>
