event delegation and interview questions done

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Concepts</title>
+    <link rel="stylesheet" href="style.css">
     <!-- <script src="./ArrayMethods/arrays.js"></script> -->
     <!-- 
     <script src="./SpreadOperator/SpreadOperator.js"></script>
@@ -22,10 +23,12 @@
     <!-- <script src="./Classes/index.js"></script> -->
     <!-- <script src="./CallApplyBind/CallApplyBind.js"></script> -->
     <!-- <script src="./Currying/index.js"></script> -->
-    <script src="./ES6Features/ES6Features.js"></script>
+    <!-- <script src="./ES6Features/ES6Features.js"></script> -->
+    <!-- <script src="./ArrayMethods/arrayMethods.js"></script> -->
+    
 </head>
 <body>
-    <h2 style="text-align: center">JS Concepts</h2>
+    <!-- <h2 style="text-align: center">JS Concepts</h2>
     <button id="clickMe">Button</button>
     <p id="para1">This is my first pagagraph</p>
     <h1>Favourite TV Shows</h1>
@@ -37,9 +40,30 @@
     </ul>
     <button id="btn">Show alert</button>
     <h1 id="heading">Hello Abhishek</h1>
+    <ul id="products">
+        <li id="shoes">shoes</li>
+        <li id="shirt">shirt</li>
+        <li id="wallet">wallet</li>
+    </ul> -->
+    <div class="container">  
+        <div class="box">
+            center
+        </div>
+    </div>
+    <button class="modalButton">Open</button>
+    <div class="modalContainer">
+        <div class="modal">
+            Modal content
+        </div>
+    </div>
+    <input type="text" onchange="handleChange()"/>
+    <div id="default"></div>
+    <div id="debounce"></div>
 </body>
+<!-- <script src="./InterviewQuestions/InterviewQuestions.js"></script> -->
+<!-- <script src="./EventDelegation/EventDelegation.js"></script> -->
+<script src="./Debounce/Debounce.js"></script>
 <!-- <script src="./DOM/index.js"></script> -->
 <!-- <script src="./CallbackFunctions/CallbackFunctions.js"></script> -->
 <!-- <script src="./Promises/Promises.js"></script> -->
-
 </html>
