minor changes in array methods and classes files added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- <script src="./EventLoop/index.js"></script> -->
     <!-- <script src="./Prototype/index.js"></script> -->
     <!-- <script src="./ClassInheritance/index.js"></script> -->
-    <!-- <script src="./Classes/index.js"></script> -->
+    <script src="./Classes/index.js"></script>
     <!-- <script src="./CallApplyBind/CallApplyBind.js"></script> -->
     <!-- <script src="./Currying/index.js"></script> -->
     <!-- <script src="./ES6Features/ES6Features.js"></script> -->
@@ -62,7 +62,7 @@
 </body>
 <!-- <script src="./InterviewQuestions/InterviewQuestions.js"></script> -->
 <!-- <script src="./EventDelegation/EventDelegation.js"></script> -->
-<script src="./Debounce/Debounce.js"></script>
+<!-- <script src="./Debounce/Debounce.js"></script> -->
 <!-- <script src="./DOM/index.js"></script> -->
 <!-- <script src="./CallbackFunctions/CallbackFunctions.js"></script> -->
 <!-- <script src="./Promises/Promises.js"></script> -->
